# komunalka

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  gmail_helper.py  models.py  notifications.py  nylas_helper.py  pyproject.toml  receipts_database.csv  requirements.txt  scheduler.py  utils.py
.github/workflows/: build-and-push.yml  deploy_website.yml
k8s/: deployment.yaml  ingress.yaml  pvc-attachments.yaml  pvc.yaml  service.yaml
static/: style.css
templates/: dashboard.html  login.html  settings.html
tests/: conftest.py  test_app.py  test_models.py  test_notifications.py  test_utils.py
website/: index.html  metadata.json  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx
