[project]
name = "komunalka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "pandas>=2.0.0",
    "pdfplumber>=0.10.0",
    "plotly>=5.18.0",
    "streamlit>=1.30.0",
    "transformers>=4.30.0",
]
